bug fixing accordion with collapsing bug

--- a/styles/about/about.scss
+++ b/styles/about/about.scss
@@ -185,7 +185,8 @@ border-radius: 50%;
   .panel {
     width: 38.1%;
     padding: 0 18px;
-    padding-bottom: 20px;
+    padding-right: 12px;
+    padding-bottom: 20x;
     bottom:20px;
     background-color: #eee;
     max-height: 0;
@@ -202,6 +203,7 @@ border-radius: 50%;
   .WholeAccordion{
     position: relative;
     top: 20%;
+    
 
   }
 
